kubernetes/local-k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yml convert --volumes hostPath
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: web
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yml convert --volumes hostPath
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: web
    spec:
      containers:
        - name: web
          image: estythomas/dromedary_web:20220127.4
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources: {}
          volumeMounts:
#            - mountPath: /usr/src/app
#              name: web-hostpath0
#            - mountPath: /gems
#              name: gem-cache
      restartPolicy: Always
      volumes:
        - hostPath:
            path: /home/esty/github/mlibrary/med/dromedary
          name: web-hostpath0
        - hostPath:
            path: /data/gems
          name: gem-cache
status: {}
